--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "socket.io": "^2.5.1"
+    "ws": "^8.17.1",
+    "websocket": "^1.0.35"
   },
   "engines": {
     "node": "14.x"
